# TheRock-glog-fork

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  RELEASES.md  ROADMAP.md  requirements-test.txt  requirements.txt  version.json
.github/workflows/: build_linux_jax_wheels.yml  build_linux_packages.yml  build_linux_pytorch_wheels.yml  build_portable_linux_pytorch_wheels.yml  build_python_packages.yml  build_pytorch_wheels.yml  build_windows_packages.yml  build_windows_pytorch_wheels.yml  ci.yml  ci_linux.yml  ci_nightly.yml  ci_windows.yml  copy_release.yml  glog.yml  portable_linux_package_matrix.yml  pre-commit.yml  publish_build_manylinux_x86_64.yml  publish_dockerfile.yml  publish_no_rocm_image_ubuntu24_04.yml  publish_pytorch_dev_docker.yml  release_linux_pytorch_wheels.yml  release_portable_linux_packages.yml  release_portable_linux_pytorch_wheels.yml  release_pytorch_wheels.yml  release_windows_packages.yml  release_windows_pytorch_wheels.yml  setup.yml  test_blas.yml  test_hipblaslt.yml  test_hipcub.yml  test_hiprand.yml  test_linux_packages.yml  test_miopen.yml  test_packages.yml  test_pytorch_docker.yml  test_pytorch_wheels.yml  test_release_packages.yml  test_rocblas.yml  test_rocprim.yml  test_rocrand.yml  (+3 more)
.glog/: glog-scan.sarif
base/: CMakeLists.txt  artifact.toml  post_hook_rocm_smi_lib.cmake
base/aux-overlay/: CMakeLists.txt
build_tools/: CMakeLists.txt  bootstrap_build.py  build_python_packages.py  bump_submodules.py  configure_ci.py  configure_ci_test.py  configure_target_run.py  create_log_archive.py  create_log_index.py  export_source_archive.py  fetch_artifacts.py  fetch_artifacts_test.py  fetch_repo.py  fetch_sources.py  fileset_tool.py  install_rocm_from_artifacts.py  linux_portable_build.py  linux_python_dist_split.py  linux_python_package.py  patch_monorepo.py  patch_rocm_libraries.py  posix_ccache_compiler_check.py  prebuilts.py  provision.py  provision_machine.py  setup_ccache.py  setup_venv.py  teatime.py  upload_logs_to_s3.py
build_tools/_therock_utils/: artifacts.py  py_packaging.py
build_tools/detail/: linux_portable_build_in_container.sh  linux_python_package_in_container.sh
build_tools/github_action/: amdgpu_family_matrix.py  configure_ci.py  configure_ci_test.py  fetch_package_targets.py
build_tools/github_actions/: .write_torch_versions.py.swp  CMakeLists.txt  amdgpu_family_matrix.py  amdgpu_family_matrix_xfail.py  build_configure.py  build_linux_configure.py  configure_ci.py  configure_ci_test.py  configure_target_run.py  convert_dict_to_json.py  create_log_index.py  determine_version.py  fetch_job_status.py  fetch_package_targets.py  fetch_test_configurations.py  github_actions_utils.py  monorepo_configure_ci.py  monorepo_map.py  populate_redshift_db.py  portable_release_note_script.py  python_to_cp_version.py  upload_build_artifacts.py  upload_build_logs_to_s3.py  upload_build_summary.py  write_json_to_file.py  write_torch_version.py  write_torch_versions.py
build_tools/hack/: README.md  build_env_diag.py  delete_workflow.sh
build_tools/tests/: artifacts_test.py  fetch_artifacts_test.py  fileset_tool_test.py
cmake/: custom_install_amdgpu_compiler.cmake  therock_amdgpu_targets.cmake  therock_artifacts.cmake  therock_compiler_config.cmake  therock_default_targets.cmake  therock_explicit_finders.cmake  therock_external_source.cmake  therock_global_post_subproject.cmake  therock_install_linux_build_id_files.cmake  therock_subproject.cmake  therock_subproject_dep_provider.cmake  therock_subproject_utils.cmake  therock_testing.cmake
cmake/templates/: find_config.tmpl.cmake  find_config_version.tmpl.cmake
comm-libs/: CMakeLists.txt  artifact-rccl.toml  pre_hook_rccl.cmake
compiler/: CMakeLists.txt  artifact-hipify.toml  pre_hook_amd-comgr.cmake  pre_hook_amd-llvm.cmake
core/: .gitignore  CMakeLists.txt  artifact-core-hipinfo.toml  post_hook_hip-clr.cmake  pre_hook_ROCR-Runtime.cmake
core/hipInfo/: CMakeLists.txt
dockerfiles/: build_manylinux_x86_64.Dockerfile  install_cmake.sh  install_googletest.sh
dockerfiles/cpubuilder/: build_manylinux_x86_64.Dockerfile
dockerfiles/pytorch-dev/: .gitignore  build_pytorch_docker_image_from_locally_build_rocm.sh  install_rocm_from_release.sh  pytorch_dev_ubuntu_24.04.Dockerfile  pytorch_ubuntu_image_from_locally_build_rocm.Dockerfile
dockerfiles/therock_tester/: no_rocm_image_ubuntu24_04.Dockerfile
docs/: environment_setup_guide.md
docs/development/: README.md  adding_tests.md  artifacts.md  baremetal_setup.md  build_system.md  dependencies.md  development_guide.md  git_chores.md  github_actions_debugging.md  windows_support.md
docs/packaging/: python_packaging.md
docs/rfcs/: README.md  RFC0001-BLAS-Stack-Build-Improvements.md  RFC0002-MonoRepo-Gardener-Rotations.md
examples/: CMakeLists.txt  clean_configure_test_project.cmake
examples/cpp-sdk-user/: CMakeLists.txt  hip-host-test.cpp
experimental/rockbuilder/: .gitignore  CONFIG.md  (+3 more)
external-builds/: .gitignore  README.md  rockbuilder.py
math-libs/: CMakeLists.txt  artifact-fft.toml  artifact-prim.toml  artifact-rand.toml  pre_hook_rocPRIM.cmake  pre_hook_rocRAND.cmake
math-libs/BLAS/: CMakeLists.txt  artifact-blas.toml  post_hook_hipBLAS.cmake  post_hook_hipBLASLt.cmake  post_hook_hipSPARSE.cmake  post_hook_rocBLAS.cmake  post_hook_rocSPARSE.cmake  pre_hook_hipBLASLt.cmake  pre_hook_rocBLAS.cmake  pre_hook_rocSPARSE.cmake
math-libs/support/: CMakeLists.txt  artifact-support.toml
ml-libs/: CMakeLists.txt  artifact-composable-kernel.toml  artifact-composable_kernel.toml  artifact-miopen.toml  pre_hook_MIOpen.cmake
profiler/: CMakeLists.txt  artifact-rocprofiler-sdk.toml  post_hook_rocprofiler-sdk.cmake
profiler/rocprof-trace-decoder/: CMakeLists.txt  compute_release_directory.c
profiler/rocprof-trace-decoder-binary/: CMakeLists.txt
profiler/roctracer-compat/: CMakeLists.txt  README.md  roctracer-compat-config.cmake
profiler/roctracer-compat/include/roctracer/: roctx.h
tests/: hipcc_check.cpp  test_rocm_sanity.py
(+451 files in other folders)
